--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <div class="container hero-container">
             <div class="hero-content reveal">
                 <p class="hero-badge">
-                    <i class="fas fa-bolt"></i> Powered by Deep Learning
+                    <i class="fas fa-bolt"></i> Powered by A.I sjjsjsj
                 </p>
-                <h1>AI-Powered Plant Disease Detection</h1>
+                <h1>AI-Powered Plant Disease Detection using ai</h1>
                 <p>Revolutionizing agriculture with real-time, accurate disease identification using deep learning technology. Early detection for healthier crops.</p>
                 <div class="hero-actions">
                     <a href="#upload" class="btn-primary">
